# ProjectPacker

./: .gitattributes  .gitignore  .repomixignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-3RD-PARTY  PLAN.md  README.md  handoff.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/src/: commands.rs  github.rs  jobs.rs  lib.rs  main.rs  settings.rs
crates/core/: Cargo.toml
crates/core/src/: detect.rs  error.rs  github.rs  ignore.rs  ignore_defaults.txt  lang.rs  lib.rs  protocol.rs  secrets.rs  tokens.rs  tree_sitter_compress.rs  types.rs  walker.rs
crates/core/src/pack/: markdown.rs  mod.rs  orchestrator.rs  pin.rs  plain.rs  security_report.rs  stats.rs  xml.rs
crates/core/src/secrets/: engine.rs  mod.rs  ruleset.rs
crates/core/src/transforms/: collapse_lockfile.rs  collapse_minified.rs  compress_skeleton.rs  dedup.rs  elide_types.rs  mark_generated.rs  mod.rs  normalize.rs  strip_comments.rs
crates/core/tests/: pack_integration.rs  protocol_golden.rs
crates/core/tests/snapshots/: protocol_golden__compression_report_block_shape.snap  protocol_golden__v1_cc_prompt.snap  protocol_golden__v1_combined_prompt.snap  protocol_golden__v1_pack_block.snap
docs/handoff/: claude-design-prompt.md
docs/mockups/: v0.4-gui.html
docs/protocol/: grok-to-cc-v1.md
docs/superpowers/plans/: 2026-04-30-projectpacker-implementation.md  2026-04-30-v02-gap-fixes.md  2026-05-01-v04-polish-and-timing.md  2026-05-11-v06-lossless-compression.md
docs/superpowers/specs/: 2026-04-30-projectpacker-design.md  2026-04-30-v02-gap-fixes-design.md  2026-05-01-v04-polish-and-timing-design.md  2026-05-11-v06-lossless-compression-design.md
frontend/: biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/bindings/: index.ts
frontend/src/components/pack/: AiContextTable.tsx  CompressionPanel.test.tsx  CompressionPanel.tsx  CopyButton.tsx  DropOverlay.tsx  GithubConnector.tsx  PhaseBreakdown.tsx  ProgressLog.tsx  SaveButton.tsx  Settings.tsx  Skeleton.tsx  StatsBar.tsx  Toggle.tsx  TransformRow.tsx  icons.tsx
frontend/src/components/ui/: checkbox.tsx
frontend/src/lib/: ai-models.ts  api.ts  events.ts  format.ts  motion.ts  persist-adapter.ts  store.ts  theme.ts  toast.ts  use-drag-drop.ts  use-github-token.ts  use-keyboard-shortcuts.ts  use-pack-job.ts
frontend/src/routes/: Bridge.tsx  Home.tsx  Pack.tsx  Result.tsx
frontend/src/styles/: globals.css
scripts/: build-release.ps1
tests/fixtures/tiny/: .gitleaksignore  README.md
tests/fixtures/tiny/docs/: intro.md
tests/fixtures/tiny/src/: danger.txt
