[package]
name = "projectpacker-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
specta.workspace = true

ignore = "0.4"
gix = { version = "0.66", default-features = false, features = ["blocking-network-client", "blocking-http-transport-reqwest", "max-performance-safe"] }
tiktoken-rs = "0.6"
tree-sitter = "0.25"
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1"
rayon = "1.10"
sha2 = "0.10"
uuid = { version = "1", features = ["v7"] }
encoding_rs = "0.8"
walkdir = "2"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
proptest = "1"
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json = { workspace = true }
