[package]
name = "projectpacker-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
specta.workspace = true

ignore = "0.4"
gix = { version = "0.66", default-features = false, features = ["blocking-network-client", "blocking-http-transport-reqwest", "max-performance-safe", "worktree-mutation"] }
tiktoken-rs = "0.6"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1"
rayon = "1.10"
blake3 = { version = "1.8", features = ["rayon", "mmap"] }
uuid = { version = "1", features = ["v7"] }
encoding_rs = "0.8"
walkdir = "2"
tempfile = "3"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
proptest = "1"
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json = { workspace = true }
