[package]
name = "projectpacker-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
specta.workspace = true

ignore = "0.4"
gix = { version = "0.66", default-features = false, features = ["blocking-network-client", "blocking-http-transport-reqwest", "max-performance-safe", "worktree-mutation"] }
tiktoken-rs = "0.6"
# `unstable_wasm` is a misnomer: it swaps the default `onig` (C dep) regex
# backend for a pure-Rust one, which means Tauri Windows cross-compiles work
# without bundling a C toolchain. Nothing about it is wasm-specific.
tokenizers = { version = "0.23", default-features = false, features = ["unstable_wasm"] }
toml = "0.8"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1"
aho-corasick = "1"
rayon = "1.10"
blake3 = { version = "1.8", features = ["rayon", "mmap"] }
uuid = { version = "1", features = ["v7"] }
encoding_rs = "0.8"
walkdir = "2"
tempfile = "3"
infer = "0.19"
file-format = "0.29"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json = { workspace = true }
